Allow adding UUIDs and present them

--- a/src/app/pages/home-page/trayd-stream-dialog/trayd-stream-dialog.component.html
+++ b/src/app/pages/home-page/trayd-stream-dialog/trayd-stream-dialog.component.html
@@ -1,1 +1,5 @@
-<p>trayd-stream-dialog works!</p>
+<h1>UUIDs list</h1>
+<button mat-raised-button (click)="addUUID()">Add new</button>
+<ol class="ids">
+    <li *ngFor="let UUID of data.UUIDs">{{UUID}}</li>
+</ol>
