Add tests for home-page

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -10,7 +10,7 @@
     <ng-template #loading>
       <app-hero-loading></app-hero-loading>
     </ng-template>
-    <button mat-raised-button (click)="openDialog()">Open Modal</button>
+    <button class="modal-toggle" mat-raised-button (click)="openDialog()">Open Modal</button>
   </div>
   <div fxFlex="10" fxFlex.gt-sm="20"></div>
 </div>
