--- a/src/app/pages/home-page/trayd-stream-dialog/trayd-stream-dialog.component.html
+++ b/src/app/pages/home-page/trayd-stream-dialog/trayd-stream-dialog.component.html
@@ -1,5 +1,7 @@
-<h1>UUIDs list</h1>
-<button class="add" mat-raised-button (click)="addUUID()">Add new</button>
-<ol class="ids">
-    <li class="UUID" *ngFor="let UUID of data.UUIDs">{{UUID}}</li>
-</ol>
+<div class="traydstream-dialog">
+    <h1>UUIDs list</h1>
+    <button class="add" mat-raised-button (click)="addUUID()">Add new</button>
+    <ol class="ids">
+        <li class="UUID" *ngFor="let UUID of data.UUIDs">{{UUID}}</li>
+    </ol>
+</div>
